Changed wlogout style, updated zsh config, updated waybar modules, updated windowrules, etc

--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -10,12 +10,11 @@ source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
 
 dwindle {
   pseudotile = yes
-  preserve_split = yes
   special_scale_factor = 0.8
 }
 
 master {
-  new_status = master
+  new_status = inherit
   new_on_top = 1
   mfact = 0.5
 }
@@ -53,14 +52,14 @@ input {
     disable_while_typing = true
     natural_scroll = false 
     clickfinger_behavior = false
-    middle_button_emulation = true
-    tap-to-click = true
+    middle_button_emulation = false
+    tap-to-click = false
     drag_lock = false
           }
   
   # below for devices with touchdevice ie. touchscreen
 	touchdevice {
-		enabled = true
+		enabled = false
 	}
 	
 	# below is for table see link above for proper variables
