--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -17,8 +17,12 @@ windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
 windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
 windowrulev2 = center, title:^(ROG Control)$
 windowrulev2 = center, title:^(Keybindings)$
+windowrulev2 = center, title:^(Skyrim Special Edition – Mod Organizer v2.5.0)$
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
-#windowrulev2 = move 72% 7%,title:^(Firefox)$ 
+#windowrulev2 = move 72% 7%,title:^(Firefox)$
+windowrulev2 = center, class:^([Pp]aradox [Ll]auncher)$
+windowrulev2 = center, title:^(WhatsApp Web)$
+windowrulev2 = center, title:^(ophjlpahpchlmihnnnihgmmeilfjmjjc_/index.html)$ #line
 
 # windowrule v2 to avoid idle for fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
@@ -72,6 +76,11 @@ windowrulev2 = float, class:^([Ff]erdium)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = float, title:^(ROG Control)$
 #windowrulev2 = float, title:^(Firefox)$
+windowrulev2 = float, title:^(btop)$
+windowrulev2 = float, class:^([Pp]aradox [Ll]auncher)$
+windowrulev2 = float, title:^(WhatsApp Web)$
+windowrulev2 = float, class:^(org.gnome.Nautilus)$
+windowrulev2 = float, class:^(org.qbittorrent.qBittorrent)$
 
 windowrulev2 = fullscreen, title:^(Skyrim Special Edition)$
 windowrulev2 = fullscreen, title:^(The Sims 4)$
@@ -123,6 +132,10 @@ windowrulev2 = size 60% 70%, class:^([Ff]erdium)$
 windowrulev2 = size 60% 70%, title:^(ROG Control)$
 windowrulev2 = size 40% 40%, class:^(nwg-look)
 windowrulev2 = size 30% 30%, title:^(Volume Control)$
+windowrulev2 = size 60% 80%, title:^(WhatsApp Web)$
+windowrulev2 = size 40% 60%, title:^(ophjlpahpchlmihnnnihgmmeilfjmjjc_/index.html)$ #line
+windowrulev2 = size 60% 60%, class:^([Tt]hunar|org.gnome.Nautilus)$
+windowrulev2 = size 60% 60%, class:^(org.qbittorrent.qBittorrent)$
 #windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$  
 #windowrulev2 = size 25% 25%, title:^(Firefox)$ 
 
