--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -54,7 +54,7 @@ label {
     text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B %Y')" </b>"
     color = $color16
     font_size = 34
-    font_family = JetBrains Mono Nerd Font 10
+    font_family = Cantarell
     position = 0, -80
     halign = center
     valign = top
@@ -67,7 +67,7 @@ label {
 #    text = cmd[update:1000] echo "$(date +"%I")" #AM/PM
     color = $color16
     font_size = 150
-    font_family = JetBrains Mono Nerd Font Mono ExtraBold 
+    font_family = Cantarell 
     position = 0, -200
     halign = center
     valign = top
@@ -79,7 +79,7 @@ label {
     text = cmd[update:1000] echo "$(date +"%M")"
     color = $color16
     font_size = 150
-    font_family = JetBrains Mono Nerd Font Mono ExtraBold
+    font_family = Cantarell
     position = 0, -450
     halign = center
     valign = top
@@ -92,7 +92,7 @@ label {
 #    text = cmd[update:1000] echo "$(date +"%S %p")" #AM/PM
     color = $color16
     font_size = 20
-    font_family = JetBrains Mono Nerd Font Mono ExtraBold
+    font_family = Cantarell
     position = 0, -450
     halign = center
     valign = top
