Fixed UserDecorAnimations.conf for newest Hyprland version (0.45) regarding shadow decoration rename

--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -23,7 +23,6 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = $scriptsDir/Polkit.sh
 
 # starup apps
-exec-once = waybar &
 exec-once = nm-applet --indicator &
 exec-once = swaync &
 exec-once = ags &
@@ -45,6 +44,12 @@ exec-once = pypr &
 
 # Load GTK settings
 exec-once = nwg-look -a &
+
+# Waybar
+exec-once = waybar &
+
+# Xtreme Download manager
+exec-once = /opt/xdman/xdm-app &
 
 # Here are list of features available but disabled by default
 # exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png  # persistent wallpaper
