--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -81,6 +81,8 @@ windowrulev2 = float, class:^([Pp]aradox [Ll]auncher)$
 windowrulev2 = float, title:^(WhatsApp Web)$
 windowrulev2 = float, class:^(org.gnome.Nautilus)$
 windowrulev2 = float, class:^(org.qbittorrent.qBittorrent)$
+windowrulev2 = float, class:^(xdm-app)$
+windowrulev2 = float, class:^(zenity)$
 
 windowrulev2 = fullscreen, title:^(Skyrim Special Edition)$
 windowrulev2 = fullscreen, title:^(The Sims 4)$
